--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sudoku",
+  "name": "weekdayCalc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.2.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
